--- a/capa2.tex
+++ b/capa2.tex
@@ -17,15 +17,15 @@
 {\large
 \hspace*{0cm}Universidade de São Paulo} \\
 \hspace*{0cm}Escola Politécnica \\
-\hspace*{0cm}Curso de Engenharia de XXX  \\
+\hspace*{0cm}Curso de Engenharia de Computação Cooperativo  \\
 \end{center}}
 % se você souber meter o logo da POLI aqui, ficaria legal...
 \vspace{4.0cm}
 \noindent
 \begin{center}
-{\Large \bf Título Descomplicado do Trabalho} \\[3cm]
-{\Large Nome do aluno1, email1}\\[6mm]
-{\Large Nome do aluno2, email2}\\[6mm]
+{\Large \bf Discretização do modelo do Pêndulo} \\[3cm]
+{\Large Bruno Andreetto, bruno.andreetto@usp.br}\\[6mm]
+{\Large Daniel Triggo Rizutto, daniel.triggo.rizutto@usp.br}\\[6mm]
 {\Large .%MAP3122 - Métodos Numéricos
 }\\[3.0cm]
 \end{center}
