Adicionando mais alguns gitignore e adicionando o arquivo .c

--- a/Modelo_relatorio.tex
+++ b/Modelo_relatorio.tex
@@ -106,7 +106,7 @@
 	\end{array}
 \end{equation}
 
-\tab  Utilizaremos como condições iniciais $\theta_0 = \frac{\pi}{4}$  e  $\omega_0 = 0$
+\tab  Utilizaremos como condições iniciais $\theta_0 = \frac{\pi}{4}$  e  $\omega_0 = 0$, implementamos o método na linguagem C, descrito a seguir:
 
 \newpage
 
