Correcao de nome e email

--- a/capa2.tex
+++ b/capa2.tex
@@ -1,4 +1,10 @@
-%\input logo
+\documentclass[10pt]{article}
+\usepackage[usenames]{color} %used for font color
+\usepackage{amssymb} %maths
+\usepackage{amsmath} %maths
+\usepackage[utf8]{inputenc} %useful to type directly diacritic characters
+\begin{document}
+\[%\input logo
 
 %\vspace*{-3cm}
 
@@ -15,31 +21,32 @@
 {\bf
 \begin{center}
 {\large
-\hspace*{0cm}Universidade de S„o Paulo} \\
-\hspace*{0cm}Escola PolitÈcnica \\
-\hspace*{0cm}Curso de Engenharia de ComputaÁ„o Cooperativo  \\
+\hspace*{0cm}Universidade de S‚Äûo Paulo} \\
+\hspace*{0cm}Escola Polit√àcnica \\
+\hspace*{0cm}Curso de Engenharia de Computa√Å‚Äûo Cooperativo  \\
 \end{center}}
-% se vocÍ souber meter o logo da POLI aqui, ficaria legal...
+% se voc√ç souber meter o logo da POLI aqui, ficaria legal...
 \vspace{4.0cm}
 \noindent
 \begin{center}
-{\Large \bf DiscretizaÁ„o do modelo do PÍndulo} \\[3cm]
+{\Large \bf Discretiza√Å‚Äûo do modelo do P√çndulo} \\[3cm]
 {\Large Bruno Andreetto, bruno.andreetto@usp.br}\\[6mm]
-{\Large Daniel Triggo Rizutto, daniel.triggo.rizutto@usp.br}\\[6mm]
-{\Large .%MAP3122 - MÈtodos NumÈricos
+{\Large Daniel Trigo Rizzuto, daniel.rizzuto@usp.br}\\[6mm]
+{\Large .%MAP3122 - M√àtodos Num√àricos
 }\\[3.0cm]
 \end{center}
 
 {\raggedleft
 \begin{minipage}[t]{8.0cm}
 \setlength{\baselineskip}{0.25in}
-RELAT”RIO apresentado ao Professor Alexandre Roma do MAP/IME-USP 
-como atividade da disciplina MAP3122 - MÈtodos NumÈricos.
+RELAT‚ÄùRIO apresentado ao Professor Alexandre Roma do MAP/IME-USP 
+como atividade da disciplina MAP3122 - M√àtodos Num√àricos.
 \end{minipage}\\[2cm]}
-% o logo tambÈm ficaria legal aqui legal...
+% o logo tamb√àm ficaria legal aqui legal...
 \vspace{2cm}
-{\center S„o Paulo - SP \\[3mm]
+{\center S‚Äûo Paulo - SP \\[3mm]
 31/03/2016 \\}
 
 
-\newpage
+\newpage\]
+\end{document}
